pdf url still not added

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="shortcut icon"  href="%PUBLIC_URL%/logo.png"  type="image/x-png "
+    <link rel="shortcut icon"  href="%PUBLIC_URL%/logo.png"  type="image/x-png ">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Essential JS 2 for React Components" />
+    <meta name="author" content="Syncfusion" />
+     <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/material.css" />
     <meta
       name="description"
       content="Aadhikhola App"
